<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22191A"
    tools:context=".SetTimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/llNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="24sp"
                android:maxLength="2"
                android:text="00"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="24sp"
                android:text="h"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/tvMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="24sp"
                android:maxLength="2"
                android:text="00"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="24sp"
                android:text="m"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/tvSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="24sp"
                android:maxLength="2"
                android:text="00"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineHeight="24sp"
                android:text="c"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgBtnSave"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:backgroundTint="#FDBA6F"
                    android:contentDescription="@string/todo"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_done" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/num0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgBtnClear"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_num"
                    android:backgroundTint="#EBBAC0"
                    android:contentDescription="@string/todo"
                    android:padding="20dp"
                    app:srcCompat="@drawable/ic_backspace" />
            </LinearLayout>
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>